overflow fix

--- a/assets/sass/partials/_contact.sass
+++ b/assets/sass/partials/_contact.sass
@@ -66,6 +66,7 @@
 
 .contact__form__input,
 .contact__form__textarea
+  border-radius: 0
   background-color: transparent
   margin-bottom: 25px
   color: $white
