--- a/assets/sass/partials/_hero.sass
+++ b/assets/sass/partials/_hero.sass
@@ -49,6 +49,7 @@
   font-weight: 600
 
   @media (max-width: 1000px)
+    letter-spacing: unset
     font-size: 20px
   @media (max-width: 700px)
     font-size: 15px
@@ -62,6 +63,7 @@
 
 .hero__image
   position: absolute
+  overflow: hidden
   left: 50%
   top: 0
   transform: translateX(-50%)
@@ -70,11 +72,11 @@
 .hero__image__img
   border: 0
   width: auto
-  overflow-x: hidden
+  overflow: hidden
   max-width: 1000px
   border-bottom: 40px solid transparent
   border-image: url("../../../assets/img/colorfull-background.jpg") 24 repeat
   padding: 0 80px
-  //filter: grayscale(100%)
   @media (max-width: 700px)
+    max-width: 100vw
     max-height: 500px
